<resources>
    <string name="app_name">ReminderApp</string>
    <string name="add_reminder_label">리마인더 추가</string>
    <string name="save_button_label">Save</string>
    <string name="reminder_title_label">리마인더 이름</string>
    <string name="setting_time_label">시간 설정</string>
    <string name="ringbell_label">벨소리</string>
    <string name="reminder_title_hint">Please enter a name</string>
    <string name="empty_reminder_list_text">등록된 리마인더가 없습니다.</string>
    <string name="ringtone_label">Ringtone</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="all_input_check_message">리마인더 제목을 입력해 주세요~</string>
    <string name="toolbar_title_home">리마인드</string>
    <string name="toolbar_title_detail">리마인드 설정</string>
    <string name="dialog_title">다른 앱 위에 표시 권한</string>
    <string name="dialog_message">[다른 앱 위에 표시] 권한을 허용해야 잠금화면에서 알람이 정상 작동합니다. 취소를 선택 할 시 앱이 종료됩니다.</string>
    <string name="dialog_positive_button">권한 설정 하러 가기</string>
    <string name="dialog_cancel_button">취소</string>
    <string name="permission_require_toast">권한을 반드시 설정해주세요.</string>
</resources>