<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kjk.reminderapp.presenter.reminderdetail.ReminderDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/indigo"
            android:elevation="4dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/reminder_title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_size"
                android:textStyle="bold"
                android:text="@string/toolbar_title_detail"
                tools:text="리마인드 설정" />
        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/reminder_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/reminder_title_label"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/reminder_title_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/reminder_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/reminder_title_hint"
            app:editTextValue="@{viewModel.reminder}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder_title_label" />

        <TextView
            android:id="@+id/reminder_setting_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/setting_time_label"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/time_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_title_editText" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_setting_time_label"
            app:timePickerValue="@{viewModel.reminder}" />


        <TextView
            android:id="@+id/reminder_ringbell_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/ringbell_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_picker" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/select_ringbell_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{() -> viewModel.navigateToSelectRingtone()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_ringbell_label">

            <ImageView
                android:id="@+id/ringbell_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:padding="@dimen/padding_default"
                android:src="@drawable/ic_baseline_music_note_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ringbell_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/ringtone_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ringbell_imageview"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ringtone" />

            <TextView
                android:id="@+id/selected_ringbell_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="@dimen/text_size_default"
                android:textColor="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ringbell_textview"
                app:layout_constraintTop_toBottomOf="@id/ringbell_textview"
                app:ringtoneTitleValue="@{viewModel.ringtoneTitle}"
                app:reminderValue="@{viewModel.reminder}"
                tools:text="HomeComing" />

            <ImageView
                android:id="@+id/move_next_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default"
                android:src="@drawable/ic_baseline_navigate_next_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/save_reminder_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:onClick="@{() -> viewModel.onSaveReminder()}"
            android:background="@drawable/button_red"
            android:text="@string/save_button_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_ringbell_layout"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>